--- a/Frontend/test-realtime.html
+++ b/Frontend/test-realtime.html
@@ -103,7 +103,7 @@
         <button onclick="clearLog()">Clear Log</button>
     </div>
 
-    <script src="http://localhost:5000/socket.io/socket.io.js"></script>
+            <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
         let socket;
         let eventCount = 0;
