--- a/Frontend/admin-inventory.html
+++ b/Frontend/admin-inventory.html
@@ -9,6 +9,165 @@
     <link rel="stylesheet" href="./adminDashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <style>
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+            color: #333;
+        }
+
+        .form-group input,
+        .form-group select,
+        .form-group textarea {
+            width: 100%;
+            padding: 8px 12px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 60px;
+        }
+
+        .form-group input:focus,
+        .form-group select:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #3498db;
+            box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.2);
+        }
+
+        .btn-sm {
+            padding: 4px 8px;
+            font-size: 12px;
+            margin: 0 2px;
+        }
+
+        /* Button colors to match reports management */
+        .btn.primary {
+            background: #3498db;
+            color: white;
+        }
+
+        .btn.primary:hover {
+            background: #2980b9;
+        }
+
+        .btn.secondary {
+            background: #95a5a6;
+            color: white;
+        }
+
+        .btn.secondary:hover {
+            background: #7f8c8d;
+        }
+
+        .btn.danger {
+            background: #e74c3c;
+            color: white;
+        }
+
+        .btn.danger:hover {
+            background: #c0392b;
+        }
+
+        .action-buttons {
+            display: flex;
+            gap: 5px;
+            justify-content: center;
+        }
+
+        .item-details .detail-row {
+            padding: 8px 0;
+            border-bottom: 1px solid #eee;
+        }
+
+        .item-details .detail-row:last-child {
+            border-bottom: none;
+        }
+
+        /* Ensure modals are visible */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 9999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal.show {
+            display: block;
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 5% auto;
+            padding: 0;
+            border-radius: 12px;
+            width: 90%;
+            max-width: 600px;
+            max-height: 90vh;
+            overflow-y: auto;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1.5rem;
+            border-bottom: 1px solid #e5e7eb;
+            background: white;
+            border-radius: 12px 12px 0 0;
+        }
+
+        .modal-body {
+            padding: 1.5rem;
+        }
+
+        .modal-footer {
+            display: flex;
+            justify-content: flex-end;
+            gap: 1rem;
+            padding: 1.5rem;
+            border-top: 1px solid #e5e7eb;
+            background: #f9fafb;
+            border-radius: 0 0 12px 12px;
+        }
+
+        .close {
+            color: #6b7280;
+            font-size: 1.5rem;
+            cursor: pointer;
+            background: none;
+            border: none;
+            padding: 0;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: background-color 0.3s;
+        }
+
+        .close:hover {
+            background: rgba(0, 0, 0, 0.1);
+            color: #1f2937;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -143,7 +302,7 @@
                             <th>Date Added</th>
                             <th>Location</th>
                             <th>Issued By</th>
-                            <th>User</th>
+                            <th>Staff ID</th>
                             <th>Last Updated</th>
                             <th>Actions</th>
                         </tr>
@@ -178,8 +337,8 @@
                 <p>This action cannot be undone.</p>
             </div>
             <div class="modal-footer">
-                <button class="btn secondary" onclick="closeDeleteModal()">Cancel</button>
                 <button class="btn danger" onclick="confirmDeleteItem()">Delete</button>
+                <button class="btn secondary" onclick="closeDeleteModal()">Cancel</button>
             </div>
         </div>
     </div>
@@ -195,8 +354,75 @@
                 <!-- Item details will be loaded here -->
             </div>
             <div class="modal-footer">
+                <button class="btn primary" onclick="printItemDetails()">Print</button>
                 <button class="btn secondary" onclick="closeItemDetailsModal()">Close</button>
-                <button class="btn primary" onclick="editCurrentItem()">Edit</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Inventory Modal -->
+    <div id="editInventoryModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="editModalTitle">Edit Inventory Item</h2>
+                <span class="close" onclick="closeEditModal()">&times;</span>
+            </div>
+            <div class="modal-body">
+                <form id="editInventoryForm">
+                    <div class="form-group">
+                        <label for="editProductType">Product Type</label>
+                        <select id="editProductType" name="productType" required>
+                            <option value="UPS">UPS</option>
+                            <option value="AVR">AVR</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="editStatus">Status</label>
+                        <select id="editStatus" name="status" required>
+                            <option value="New">New</option>
+                            <option value="Replaced">Replaced</option>
+                            <option value="In Use">In Use</option>
+                            <option value="Maintenance">Maintenance</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="editSize">Size</label>
+                        <select id="editSize" name="size" required>
+                            <option value="1.5kva">1.5kva</option>
+                            <option value="3kva">3kva</option>
+                            <option value="6kva">6kva</option>
+                            <option value="10kva">10kva</option>
+                            <option value="20kva">20kva</option>
+                            <option value="30kva">30kva</option>
+                            <option value="40kva">40kva</option>
+                            <option value="60kva">60kva</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="editSerialNumber">Serial Number</label>
+                        <input type="text" id="editSerialNumber" name="serialNumber" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editDateAdded">Date Added</label>
+                        <input type="date" id="editDateAdded" name="dateAdded" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editLocation">Location</label>
+                        <input type="text" id="editLocation" name="location" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editIssuedBy">Issued By</label>
+                        <input type="text" id="editIssuedBy" name="issuedBy" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="editNotes">Notes</label>
+                        <textarea id="editNotes" name="notes" rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn primary" onclick="saveInventoryChanges()">Save Changes</button>
+                <button class="btn secondary" onclick="closeEditModal()">Cancel</button>
             </div>
         </div>
     </div>
