--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -175,7 +175,7 @@
         </div>
     </div>
 
-    <script src="http://localhost:5000/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
         // Connect to realtime to update admin reports table instantly
         document.addEventListener('DOMContentLoaded', () => {
