--- a/Frontend/test-realtime-inventory.html
+++ b/Frontend/test-realtime-inventory.html
@@ -134,7 +134,7 @@
         </div>
     </div>
 
-    <script src="http://localhost:5000/socket.io/socket.io.js"></script>
+            <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
         let socket = null;
         let broadcastChannel = null;
