--- a/Frontend/tool_box.html
+++ b/Frontend/tool_box.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="./images/logo_gpha.png">
   <link rel="stylesheet" href="./dashboard.css">
   <link rel="stylesheet" href="./user-greeting.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     .search-container {
       margin: 20px 0;
@@ -148,9 +149,9 @@
     #selectedToolsContainer {
       margin: 15px 0;
       padding: 15px;
-      background: #f8f9fa;
-      border-radius: 6px;
-      border: 1px solid #e9ecef;
+      background: transparent;
+      border-radius: 0;
+      border: none;
     }
 
     #selectedToolsList {
@@ -163,18 +164,19 @@
     }
 
     #selectedToolsList li {
-      background: #3498db;
-      color: white;
+      background: transparent;
+      color: #333;
       padding: 8px 12px;
-      border-radius: 20px;
+      border-radius: 0;
       font-size: 14px;
       display: flex;
       align-items: center;
       gap: 8px;
+      border: none;
     }
 
     .remove-tool {
-      background: rgba(255, 255, 255, 0.2);
+      background: #dc3545;
       color: white;
       border: none;
       border-radius: 50%;
@@ -190,20 +192,10 @@
     }
 
     .remove-tool:hover {
-      background: rgba(255, 255, 255, 0.3);
+      background: #c82333;
     }
 
-    /* Edit Mode Styling */
-    .header.edit-mode h1 {
-      color: #e67e22;
-      border-bottom: 2px solid #e67e22;
-      padding-bottom: 10px;
-    }
 
-    .header.edit-mode h5 {
-      color: #e67e22;
-      font-style: italic;
-    }
 
     /* Enhanced Mobile Responsive Design */
     @media (max-width: 1024px) {
@@ -336,18 +328,11 @@
       background: #5a6268;
     }
 
-    .form-actions {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-    }
 
-    .form-header {
-      margin-bottom: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+
+
+
+
 
     @media (max-width: 768px) {
       .form-header {
@@ -356,223 +341,7 @@
         align-items: stretch;
       }
 
-      .form-actions {
-        justify-content: center;
-      }
-    }
 
-    /* Toolbox Table Styling */
-    .toolbox-table-section {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 20px;
-      background: #f8f9fa;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .table-controls {
-      display: flex;
-      gap: 15px;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-bottom: 20px;
-    }
-
-    .table-container {
-      overflow-x: auto;
-    }
-
-    #toolboxTable {
-      width: 100%;
-      border-collapse: collapse;
-      background: white;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    #toolboxTable th,
-    #toolboxTable td {
-      padding: 15px;
-      text-align: left;
-      border-bottom: 1px solid #ecf0f1;
-    }
-
-    #toolboxTable th {
-      background: #34495e;
-      color: white;
-      border-bottom: 2px solid #2c3e50;
-    }
-
-    #toolboxTable tr:last-child td {
-      border-bottom: none;
-    }
-
-    #toolboxTable tr:hover {
-      background-color: #f0f3f5;
-    }
-
-    .pagination {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .pagination button {
-      padding: 8px 16px;
-      background: #95a5a6;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .pagination button:hover:not(:disabled) {
-      background: #7f8c8d;
-    }
-
-    .pagination button:disabled {
-      background: #bdc3c7;
-      cursor: not-allowed;
-      color: #7f8c8d;
-    }
-
-    .pagination span {
-      color: #2c3e50;
-      font-weight: 600;
-    }
-
-    /* Status Badge Styling */
-    .status-badge {
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .status-draft {
-      background-color: #f0f3f5;
-      color: #343a40;
-    }
-
-    .status-completed {
-      background-color: #d4edda;
-      color: #155724;
-    }
-
-    /* Action Button Styling */
-    .btn-edit,
-    .btn-save,
-    .btn-delete {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn-edit {
-      background-color: #3498db;
-      color: white;
-    }
-
-    .btn-edit:hover {
-      background-color: #2980b9;
-    }
-
-    .btn-save {
-      background-color: #27ae60;
-      color: white;
-    }
-
-    .btn-save:hover {
-      background-color: #229954;
-    }
-
-    .btn-delete {
-      background-color: #e74c3c;
-      color: white;
-    }
-
-    .btn-delete:hover {
-      background-color: #c0392b;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      .toolbox-table-section {
-        padding: 10px;
-        margin: 10px;
-      }
-
-      .table-controls {
-        flex-direction: column;
-        align-items: stretch;
-      }
-
-      .table-controls input,
-      .table-controls select,
-      .table-controls button {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-
-      #toolboxTable th,
-      #toolboxTable td {
-        padding: 8px;
-        font-size: 14px;
-      }
-
-      .btn-edit,
-      .btn-save,
-      .btn-delete {
-        padding: 4px 8px;
-        font-size: 11px;
-        margin: 2px;
-      }
-    }
-
-    /* Loading and Empty States */
-    .table-loading {
-      text-align: center;
-      padding: 40px;
-      color: #7f8c8d;
-    }
-
-    .table-empty {
-      text-align: center;
-      padding: 40px;
-      color: #95a5a6;
-    }
-
-    /* Tooltip for truncated text */
-    .truncate-text {
-      max-width: 150px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      cursor: help;
-    }
-
-    .truncate-text:hover {
-      white-space: normal;
-      word-wrap: break-word;
-      max-width: 300px;
-      position: relative;
-      z-index: 1000;
-      background: white;
-      padding: 5px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -609,9 +378,6 @@
       <div class="form-header"
         style="margin-bottom: 20px; display: flex; justify-content: space-between; align-items: center;">
         <h2>Toolbox Form</h2>
-        <div class="form-actions">
-          <button type="button" onclick="toggleEditMode()" id="editModeBtn" style="display: none;">✏️ Edit Mode</button>
-        </div>
       </div>
 
       <form id="toolboxForm" action="#" method="post">
@@ -722,15 +488,16 @@
           </a>
         </div>
 
-        <div id="editModeButtons" style="display: none; margin-top: 20px; text-align: center;">
-          <button type="button"
-            style="display: inline-block; padding: 12px 24px; background: #e74c3c; color: white; text-decoration: none; border-radius: 6px; font-weight: 600; transition: background-color 0.3s ease; margin-right: 10px; border: none; cursor: pointer;"
-            onmouseover="this.style.background='#c0392b'" onmouseout="this.style.background='#e74c3c'"
-            onclick="cancelEdit()">
-            ❌ Cancel Edit
-          </button>
-        </div>
+
       </form>
+
+
+
+
+
+
+
+
 
   </div>
 
@@ -756,25 +523,17 @@
           console.log('🔌 Disconnected from real-time toolbox updates');
         });
 
-        // Toolbox created event (for confirmation)
-        socket.on('tool:created', (data) => {
+        // Toolbox events for real-time updates
+        socket.on('toolbox:created', (data) => {
           console.log('🛠️ Toolbox created successfully');
-          // Refresh the table to show the new entry
-          refreshToolboxTable();
         });
 
-        // Toolbox updated event (for confirmation)
-        socket.on('tool:updated', (data) => {
+        socket.on('toolbox:updated', (data) => {
           console.log('🛠️ Toolbox updated successfully');
-          // Refresh the table to show the updated entry
-          refreshToolboxTable();
         });
 
-        // Toolbox deleted event (for confirmation)
-        socket.on('tool:deleted', (data) => {
+        socket.on('toolbox:deleted', (data) => {
           console.log('🛠️ Toolbox deleted successfully');
-          // Refresh the table to show the updated entry
-          refreshToolboxTable();
         });
 
       } catch (e) {
@@ -891,6 +650,7 @@
           return;
         }
 
+        console.log('🔍 Loading toolbox for edit, ID:', toolboxId);
         const response = await fetch(`http://localhost:5000/api/toolbox/${toolboxId}`, {
           headers: {
             'Authorization': `Bearer ${token}`
@@ -899,6 +659,7 @@
 
         if (response.ok) {
           const toolbox = await response.json();
+          console.log('📋 Toolbox data received:', toolbox);
 
           // Populate form fields - handle both snake_case and camelCase
           document.getElementById('workActivity').value = toolbox.work_activity || toolbox.workActivity || '';
@@ -926,48 +687,25 @@
           // Update button text and header
           document.getElementById('submitBtn').textContent = 'Update Toolbox Form';
           document.querySelector('.header h1').textContent = 'EDIT TOOLBOX FORM';
-          document.querySelector('.header p').textContent = 'Update existing toolbox form data';
           document.querySelector('.header').classList.add('edit-mode');
 
           showMessage('✅ Toolbox form loaded for editing', 'success');
         } else {
+          const errorText = await response.text();
+          console.error('❌ Failed to load toolbox form:', response.status, errorText);
           showMessage('❌ Failed to load toolbox form for editing', 'error');
         }
       } catch (error) {
-        console.error('Error loading toolbox for edit:', error);
+        console.error('❌ Error loading toolbox for edit:', error);
         showMessage('❌ Error loading toolbox form', 'error');
       }
     }
 
-    // Function to cancel edit mode
-    function cancelEdit() {
-      // Reset form to original state
-      const form = document.getElementById('toolboxForm');
-      if (form) {
-        form.reset();
-        selectedTools = [];
-        updateSelectedToolsDisplay();
 
-        // Hide edit mode buttons
-        const editModeButtons = document.getElementById('editModeButtons');
-        if (editModeButtons) {
-          editModeButtons.style.display = 'none';
-        }
 
-        // Reset submit button
-        const submitBtn = form.querySelector('button[type="submit"]');
-        if (submitBtn) {
-          submitBtn.textContent = 'Submit';
-        }
 
-        // Clear edit ID from URL
-        const url = new URL(window.location);
-        url.searchParams.delete('edit');
-        window.history.replaceState({}, '', url);
 
-        showMessage('✅ Edit mode cancelled. Form has been reset.', 'success');
-      }
-    }
+
 
     document.addEventListener('DOMContentLoaded', () => {
       const form = document.getElementById('toolboxForm');
@@ -979,11 +717,12 @@
       // Test backend connectivity
       testBackendConnection();
 
+
+
       // Check if we're in edit mode
       const editId = getEditId();
       if (editId) {
         loadToolboxForEdit(editId);
-        document.getElementById('editModeButtons').style.display = 'block'; // Show cancel edit button
       }
 
       form.addEventListener('submit', async (e) => {
@@ -1062,14 +801,20 @@
 
           let response;
           if (editId) {
-            // Update existing toolbox
+            // Update existing toolbox - automatically mark as completed
+            const updateData = {
+              ...formData,
+              status: 'completed' // Automatically set status to completed when updating
+            };
+            console.log('Updating toolbox with completed status:', updateData);
+
             response = await fetch(`http://localhost:5000/api/toolbox/${editId}`, {
               method: 'PUT',
               headers: {
                 'Content-Type': 'application/json',
                 'Authorization': `Bearer ${token}`
               },
-              body: JSON.stringify(formData)
+              body: JSON.stringify(updateData)
             });
           } else {
             // Create new toolbox
@@ -1091,23 +836,22 @@
             const action = editId ? 'updated' : 'created';
 
             if (!editId) {
-              // For new submissions, redirect to the submitted page
-              const redirectData = {
-                workActivity: document.getElementById('workActivity').value,
-                date: document.getElementById('date').value,
-                workLocation: document.getElementById('workLocation').value,
-                nameCompany: document.getElementById('nameCompany').value,
-                toolsUsed: toolsToUse.join(', ')
-              };
+              // For new submissions, show success message and refresh the table
+              showMessage('✅ Toolbox form submitted successfully!', 'success');
 
-              // Encode the form data and redirect
-              const encodedData = encodeURIComponent(JSON.stringify(redirectData));
-              window.location.href = `./toolbox-submitted.html?data=${encodedData}`;
+              // Clear the form
+              form.reset();
+              selectedTools = [];
+              updateSelectedToolsDisplay();
+
+              // Form submitted successfully - user can now view their toolbox
             } else {
-              // For updates, show success message and redirect to dashboard
-              showMessage('✅ Form updated successfully! Redirecting to dashboard...', 'success');
+              // For updates, show success message and redirect to toolbox management
+              showMessage('✅ Toolbox form updated and marked as completed!', 'success');
+
+              // Redirect back to toolbox management page after a short delay
               setTimeout(() => {
-                window.location.href = './dashboard.html';
+                window.location.href = './toolbox-submitted.html?updated=true';
               }, 2000);
             }
 
@@ -1137,6 +881,38 @@
       // Setup tool selection on page load
       setupToolSelection();
     });
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </script>
 
   <script src="./dark-mode.js"></script>
