Fix Render deployment: Force npm usage and fix SQLite3 binary issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" type="image/png" href="./images/logo_gpha.png">
+    <link rel="icon" type="image/png" href="./Frontend/images/logo_gpha.png">
     <title>Electrical Management Systems</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="login-box">
-            <img src="./images/logo_gpha.png" alt="User Avatar" class="avatar">
+            <img src="./Frontend/images/logo_gpha.png" alt="User Avatar" class="avatar">
             <h2>Welcome Back!</h2>
             <form id="LoginForm">
                 <div class="input-group">
@@ -24,7 +24,7 @@
                 </div>
                 <button type="submit" class="login-btn">Login</button>
                 <p class="forgot-password">
-                    <a href="./reset_password.html">Forgot Password?</a>
+                    <a href="./Frontend/reset_password.html">Forgot Password?</a>
                 </p>
 
 
