Update production server and prepare for Render deployment - Fixed production server to use app-robust.js with SQLite - All routes and middleware properly loaded - SQLite database working correctly - Ready for Render deployment with SQLite support

--- a/Frontend-deploy/test.html
+++ b/Frontend-deploy/test.html
@@ -48,7 +48,7 @@
                             ✅ Configuration loaded successfully!<br>
                             API Base: ${window.appConfig.apiBaseUrl}<br>
                             Socket URL: ${window.appConfig.socketUrl}<br>
-                            Environment: ${window.appConfig.isVercel ? 'Vercel' : 'Local'}
+                            Environment: ${window.appConfig.isRender ? 'Render' : 'Local'}
                         </div>
                     `;
                 } else {
