--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -48,7 +48,7 @@
                             ✅ Configuration loaded successfully!<br>
                             API Base: ${window.appConfig.apiBaseUrl}<br>
                             Socket URL: ${window.appConfig.socketUrl}<br>
-                            Environment: ${window.appConfig.isVercel ? 'Vercel' : 'Local'}
+                            Environment: ${window.appConfig.isRender ? 'Render' : 'Local'}
                         </div>
                     `;
                 } else {
